# Data-Structures-and-Algorithms

./: .gitignore  LICENSE  README.md
AsInfection/: CMakeLists.txt  contributors.txt
BTree/: btree.cpp  btree.h  btree_adapters.h  main.cpp
BidLinkedList/: BidiLinkedList.h  BidiLinkedList.hpp  CMakeLists.txt
BinaryTree/: binary_tree.cpp
DNA_linked_list/: CMakeLists.txt  dna_element.cpp  dna_element.h  dna_repairer.cpp  main.cpp  (+3 more)
GHW. Marinosyan/Compression/: CMakeLists.txt  Compression  huffman.cpp  huffman.h  main.cpp  shannon-fano.cpp  shannon-fano.h  utilities.cpp  utilities.h
GHW. Marinosyan/Compression/TestingFiles/: 100Kb_EN_RU_S_set1.txt  100Kb_EN_RU_S_set2.txt  100Kb_EN_RU_S_set3.txt  100Kb_EN_RU_set1.txt  100Kb_EN_RU_set2.txt  100Kb_EN_RU_set3.txt  100Kb_EN_set2.txt  100Kb_EN_set3.txt  1Mb_EN.txt_set1.txt  1Mb_EN.txt_set2.txt  1Mb_EN.txt_set3.txt  1Mb_EN_RU.txt_set2.txt  1Mb_EN_RU.txt_set3.txt  1Mb_EN_RU_S.txt_set2.txt  1Mb_EN_RU_S.txt_set3.txt  20Kb_EN_RU_S_set2.txt  20Kb_EN_RU_S_set3.txt  20Kb_EN_RU_set1.txt  20Kb_EN_RU_set2.txt  20Kb_EN_RU_set3.txt  20Kb_EN_set2.txt  20Kb_EN_set3.txt  2Mb_EN.txt_set1.txt  2Mb_EN.txt_set2.txt  2Mb_EN.txt_set3.txt  2Mb_EN_RU.txt_set2.txt  2Mb_EN_RU.txt_set3.txt  2Mb_EN_RU_S.txt_set1.txt  2Mb_EN_RU_S.txt_set2.txt  2Mb_EN_RU_S.txt_set3.txt  3Mb_EN.txt_set2.txt  3Mb_EN.txt_set3.txt  3Mb_EN_RU.txt_set1.txt  3Mb_EN_RU.txt_set2.txt  3Mb_EN_RU.txt_set3.txt  3Mb_EN_RU_S.txt_set1.txt  3Mb_EN_RU_S.txt_set2.txt  3Mb_EN_RU_S.txt_set3.txt  40Kb_EN_RU_S_set2.txt  40Kb_EN_RU_S_set3.txt  (+21 more)
PrinterSimulation/: CMakeLists.txt  main.cpp
(+141 files in other folders)
